# fapi

./: .env  Dockerfile  alembic.ini  docker-compose.yaml  init-db.sh  pyproject.toml  start.sh
app/: main.py
app/auth/: models.py  routes.py  schemas.py
app/cart/: models.py  routes.py  schemas.py
app/core/: config.py  security.py
app/db/: base.py  session.py
app/products/: models.py  routes.py  schemas.py
migrations/: env.py
migrations/versions/: 2024_09_09_2017-5c407263e7f2_database_creation.py
tests/: test_auth.py  test_cart.py
